--- a/app/src/main/res/layout/fragment_add_note.xml
+++ b/app/src/main/res/layout/fragment_add_note.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.addnote.AddNoteFragment">
+    tools:context=".view.screens.addnote.AddNoteFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
