--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.start.StartFragment">
+    tools:context=".view.screens.start.StartFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
